# tensor

./: .flake8  .gitignore  BLOGPOST.md  README.md  README.rst  noxfile.py  pyproject.toml  thoughts.md
_nox/: __init__.py  _nox.py  activate.py  coverage.py  lint.py  security.py  test.py
_nox/docs/: __init__.py  build.py  build_with_view.py  examples.py
_nox/types/: __init__.py  runtime.py  static.py
relio/: env.py
relio/array/: array.py  dtype.py  fn.py  gradient.py  jit.py  matrix.py  ops.py  tensor.py  typcons.py
relio/base/: probability.py  ret.py  return.py  reward.py  selection_space.py  step.py
relio/core/: rate.py  return_.py
relio/cron/: stepped.py
relio/data/: batch.py  dataset.py
relio/dataset/: dataset.py
relio/engine/: episodic.py
relio/func/: grad.py
relio/math/: fn.py  pr.py  util.py
relio/mcmc/: base.py
relio/policy/: __init__.py  value_function.py
relio/prob/: __init__.py  distribution.py  event.py  expectation.py  measurable.py  pdf.py  probabilistic.py  probability.py  randvar.py  stochastic.py
relio/state/: async.py  environment.py  param.py  space.py  state.py  terminus.py  value.py
relio/tensor/: tensor.py
relio/world/: state.py
tensor/_array/: __init__.py  element.py  ops.py
tensor/_datatype/: _datatype.py  _todo.py
tensor/_tensor/: _tensor.py  initialize.py
tensor/_tensor_old/: __init__.py
tensor/_topology/: _topology.py  chess.py
tensor/core/: outcome.py  return_.py  selection.py
tensor/datatype/: __init__.py  _todo.py
tensor/op/: letsgo.py
tensor/policy/: action_value.py  evaluate.py  fixed.py  (+3 more)
(+364 files in other folders)
